Archive2/a2/e8d3c1f0c624c2/output
main.cpp:4:16: error: expected '(' for function-style cast or type construction
    return void*(5);
           ~~~~^
main.cpp:11:44: error: extraneous ')' before ';'
  char* a1 = static_cast<char*>((void*)ptr));
                                           ^
2 errors generated.
